[project @ 89] Added the eye and fixed up image/input/select alignment.

--- a/assets/all.css
+++ b/assets/all.css
@@ -9,6 +9,10 @@ body, h1, h2, h3, h4, h5, h6 {
 	font-family: Helvetica, Arial, sans-serif;
 }
 
+img, input, select {
+	vertical-align: middle;
+}
+
 h1 {
 	font-size: 200%;
 	font-weight: normal;
